group 'com.crazyStrome'
version '1.0-SNAPSHOT'

apply plugin: 'java'
compileJava.options.encoding = 'UTF-8'
version = '1.0'

sourceCompatibility = 21
targetCompatibility = 21
sourceSets {
    main {
        resources {
            srcDir 'src/main/java/MultiplyDowloader'
        }
        output.resourcesDir = "build/classes/java/main/MultiplyDowloader"
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation group: 'junit', name: 'junit', version: '4.12'
    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
}

task copyJars (type:Copy) {
    from configurations.runtimeClasspath
    into 'build/libs/configs'
}

task copyConfigs (type: Copy) {
    from 'configs/'
    into 'build/libs/configs'
}

task generateJar(type: Jar, dependsOn: [copyJars, copyConfigs, jar]) {
    manifest {
        attributes(
                'Implementation-Title': 'Gradle',
                'Implementation-Version': version,
                'Created-By': 'crazyStrome',
                'Main-Class': 'MultiplyDowloader.Main',
                'Class-Path': configurations.runtimeClasspath.collect {
                    'lib' + it.getName().join(' ')
                }
        )
    }
    into('') {
        from "$buildDir/classes/java/main/MultiplyDowloader"
        include('sample')
    }
    into('') {
        from "$projectDir/src/main/java/MultiplyDowloader"
    }
}
